--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
+* {
+    box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    background-color: #d2dbdc;
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-window {
+    display: flex;
+    height: 100vh;
+    background: #ededed;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.sidebar {
+    width: 35%;
+    max-width: 415px;
+    display: flex;
+    flex-direction: column;
+    border-right: 1px solid #ddd;
 }
 
-.App-link {
-  color: #61dafb;
+header {
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 15px;
+    background: rgb(17, 17, 17);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header--avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    cursor: pointer;
 }
+
+.header--buttons {
+    display: flex;
+}
+
+.header--btn {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+cursor: pointer;
+}
+
+.search {
+    background: f6f6f6;
+    border-bottom: 1px solid #eee;
+    padding: 5px 15px;
+}
+
+.search--input {
+    background-color: white;
+    height: 40px;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    padding: 0 10px;
+}
+
+.search--input input {
+    flex: 1;
+    border: 0;
+    outline: 0;
+    background: transparent;
+    margin-left: 10px;
+}
+
+.chatlist {
+    flex: 1;
+    background-color: #fff;
+    overflow-y: auto;
+}
+
+.chatlist::-webkit-scrollbar{
+    width: 6px;
+    height: 6px;
+}
+
+.chatlist::-webkit-scrollbar-thumb{
+    background: rgb(17, 17, 17, 0.2);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    .contentarea {
+
+    }
