--- a/src/components/ChatListItem/ChatListItem.css
+++ b/src/components/ChatListItem/ChatListItem.css
@@ -6,7 +6,7 @@
 }
 
 .chatListItem:hover{
-    background-color: #f5f5f5;
+    background-color: #323739;
 }
 
 .chatListItem--avatar{
@@ -21,7 +21,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid #2a2f32;
     padding-right: 15px;
     margin-left: 15px;
 
@@ -39,17 +39,17 @@
 
 .chatListItem--name{
     font-size: 17px;
-    color: #000;
+    color: #cbcccd;
 }
 
 .chatListItem--date{
     font-size: 12px;
-    color: #999;   
+    color: #cbcccd;   
 }
 
 .chatListItem--lastMsg{
     font-size: 14px;
-    color: #999;
+    color: #cbcccd;
     display: flex;
     width: 100%;
 }
